--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,11 @@
+[profile.default]
+solc_version = '0.8.9'
+auto_detect_solc = false
+optimizer_runs = 1_000
+
 [profile.remappings]
-    "@solmate-utils/" = "lib/solmate/src/utils/"
-    "ds-test/" = "lib/forge-std/lib/ds-test/src/"
-    "forge-std/" = "lib/forge-std/src/"
-    "solmate/" = "lib/solmate/src/"
-    "weird-erc20/" = "lib/weird-erc20/src/"
+"@solmate-utils/" = "lib/solmate/src/utils/"
+"ds-test/" = "lib/forge-std/lib/ds-test/src/"
+"forge-std/" = "lib/forge-std/src/"
+"solmate/" = "lib/solmate/src/"
+"weird-erc20/" = "lib/weird-erc20/src/"
