--- a/foundry.toml
+++ b/foundry.toml
@@ -11,6 +11,7 @@ solc = "0.8.18"
 optimizer = true
 optimizer_runs = 200
 gas_reports = ["StakingDiamond"]
+ffi = true
 remappings = [
     'forge-std/=lib/forge-std/src/',
     '@openzeppelin/=lib/openzeppelin-contracts/contracts/',
