add foundry gh action

--- a/foundry.toml
+++ b/foundry.toml
@@ -31,3 +31,14 @@ runs = 128
 runs = 128
 depth = 128
 fail_on_revert = true
+
+[profile.ci]
+verbosity = 1
+
+[profile.ci.invariant]
+runs = 64
+depth = 64
+fail_on_revert = true
+
+[profile.ci.fuzz]
+runs = 64
